// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OIbText check Texte with inline 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="name"
    >
      label
    </label>
    <input
      aria-invalid="false"
      class="oi-form-input form-control"
      id="name"
      name="name"
      type="text"
      value="a text"
    />
    <div
      class="invalid-feedback"
    />
  </div>
</div>
`;

exports[`OIbText check Texte with too short value 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="name"
    >
      label
    </label>
    <input
      aria-invalid="true"
      class="oi-form-input is-invalid form-control"
      id="name"
      name="name"
      type="text"
      value="a text"
    />
    <div
      class="invalid-feedback"
    >
      Value length should be at least 10
    </div>
  </div>
</div>
`;

exports[`OIbText check Texte with value="a text" 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="name"
    >
      label
    </label>
    <input
      aria-invalid="false"
      class="oi-form-input form-control"
      id="name"
      name="name"
      type="text"
      value="a text"
    />
    <div
      class="invalid-feedback"
    />
  </div>
</div>
`;
